# pydantic-autocli

./: CLAUDE.md  Makefile  README.md  main.py  minimal_test.py  pyproject.toml  run_test.sh  test_cli.py
.github/workflows/: ci.yml
examples/: example.py  simple.py  simple_cli.py
pydantic_autocli/: __init__.py  cli.py
src/: __init__.py
tests/: force_tests.py  test_arg_parsing.py  test_autocli.py  test_class_resolution.py  test_extra_args.py  test_help_handling.py  test_prepare_functionality.py  test_return_types.py  test_run_default.py
