[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-autocli"
version = "0.3.1"
description = "Automatically generate CLI from Pydantic models"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Ken Enda", email = "ken@endaaman.com"},
]
dependencies = [
    "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/endaaman/pydantic-autocli"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_autocli"]
include = ["examples/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.taskipy.tasks]
test = "pytest"
coverage = "pytest --cov=pydantic_autocli --cov-report=term-missing --disable-warnings"
example = "python examples/example.py"
clean = "rm -rf build/ dist/ *.egg-info/ __pycache__/ && find . -name '*.pyc' -delete && find . -name '__pycache__' -delete"
lint = "ruff check ."
fix = "ruff check --fix ."

[tool.ruff.lint]
ignore = ["E741"]

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pytest>=7.4.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.7",
    "taskipy>=1.14.1",
]
